- TW-1724 some commands show color codes when redirected (thanks to Alan Young).
- TW-1729 zsh completion: zregexparse:4: not enough regex argument (thanks to
          Daniel Shahaf).
- TW-1733 taskwarrior 2.5.0 can not compile FreeBSD 10.1 (thanks to ribbon).
- TW-1735 context with no subcommand should do something (thanks to Simon
          Michael).
- TW-1738 add defined languages JAPANESE (thanks to ribbon).
- TW-1741 Warning "ignoring return value of ‘int ftruncate" while doing make on
          xubuntu15.10 (thanks to Sunil Joshi).
- TW-1742 Indian Holiday Calendar (Master HolidayFile) (thanks to Sunil Joshi).
- TW-1748 CMakeLists shouldn't hardcode libc++ on Darwin (thanks to Misty De Meo).
- TW-1749 PATH_MAX isn't defined in FS.cpp in some versions of OS X (thanks to
          Misty De Meo).
- TW-1750 REG_ENHANCED, used in RX.cpp, isn't defined in all versions of Darwin
          (thanks to Misty De Meo).
- TW-1752 cleanup of diag output (thanks to David Patrick).
- Fixed broken build for Cygwin and older GCC (thanks to Richard Boß).
- The default configuration is now 256-color only.
- The 'columns' report now shows whether a column is modifiable or read only.
- UDA indicator column did not properly default to 'U' (thanks to JDufault).
- Removed task.fish arguments until TW-1404 is fixed (thanks to Roman
  Inflianskas)
- Removed unused 'dom' and 'shell.prompt' configuration settings.
- Numerous performance improvements. Taskwarrior 2.5.1 is between X% and
  Y% faster than 2.5.0 when running various commands.
- New formatting specifier 'relative' for columns of Date type was introduced.

------ current release ---------------------------

2.5.0 (2015-10-21) dd5968a61b1fab258b38879cfdbb7d67f1bcd550

- TW-20   Task edit loses annotation precision, causing journal updating code
          to incorrectly indicate annotions are deleted and recreated (thanks
          to Cory Donnelly).
- TW-32   Unable to change annotations via task edit (thanks to Peter De